all kind of use of generics
git-svn-id: https://scm.mmbase.org/mmbase/trunk@21889 91430c5f-d668-0410-9e7d-dd663366dcfd